# Backend_DigitalTransformation

./: .gitignore  README.md  main.py  pyproject.toml
src/: keyboards.py  main.py
src/api/: Dockerfile  main.py
src/api/dto/: cards.py  roles.py
src/api/routes/: cards.py  roles.py
src/db/: database_manager.py  models.py
src/handlers/: __init__.py  game_rules.py  login.py  menu.py  registration.py  rooms.py  start.py
