[tool.poetry]
name = "backend-digitaltransformation"
version = "0.1.0"
description = ""
authors = ["Pavel <barikovp@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.20.0.post0"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.40"
mysql-connector-python = "^9.3.0"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
